Fixed(results.html) : 우클릭 허용

--- a/resultPage/templates/results.html
+++ b/resultPage/templates/results.html
@@ -287,7 +287,7 @@
     </style>
 </head>
 
-<body oncontextmenu="return false" onselectstart="return false" onkeydown="return false">
+<body onselectstart="return false" onkeydown="return false">
     <div id="loading-overlay">
         <img class="spinner"
             src="https://i.giphy.com/media/v1.Y2lkPTc5MGI3NjExdDZnam4yMWh1cXAybHRsbDg3b3R4ZHVncTlrMThwMTZqcmVxazhwcyZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/2c85mEsTFONgM0sOQ/giphy.gif"
