Add(index.html) : 광고 재추가

--- a/mainPage/templates/index.html
+++ b/mainPage/templates/index.html
@@ -205,7 +205,7 @@
             <a href="/question"><button id="startBtn">테스트 시작하기</button></a>
         </div>
         <div class="admin">
-            <ins class="kakao_ad_area" style="display:none;" data-ad-unit="DAN-dNnzQmuBOApaWPxz" data-ad-width="320"
+            <ins class="kakao_ad_area" style="display:none;" data-ad-unit="DAN-kqBabb5WMQqNruNX" data-ad-width="320"
                 data-ad-height="100"></ins>
             <script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
         </div>
